convert restrict-secrets-by-name
Signed-off-by: Chandan-DK <chandandk468@gmail.com>

--- a/other-cel/restrict-secrets-by-name/restrict-secrets-by-name.yaml
+++ b/other-cel/restrict-secrets-by-name/restrict-secrets-by-name.yaml
@@ -3,11 +3,11 @@ kind: ClusterPolicy
 metadata:
   name: restrict-secrets-by-name
   annotations:
-    policies.kyverno.io/title: Restrict Secrets by Name
-    policies.kyverno.io/category: Other
+    policies.kyverno.io/title: Restrict Secrets by Name in CEL expressions
+    policies.kyverno.io/category: Other in CEL 
     policies.kyverno.io/subject: Pod, Secret
-    kyverno.io/kyverno-version: 1.6.0
-    kyverno.io/kubernetes-version: "1.21"
+    kyverno.io/kyverno-version: 1.11.0
+    kyverno.io/kubernetes-version: "1.26-1.27"
     policies.kyverno.io/description: >-
       Secrets often contain sensitive information and their access should be carefully controlled.
       Although Kubernetes RBAC can be effective at restricting them in several ways,
@@ -18,7 +18,7 @@ metadata:
       result in a Secret being mounted.
 spec:
   background: false
-  validationFailureAction: enforce
+  validationFailureAction: Audit
   rules:
   - name: safe-secrets-from-env
     match:
@@ -26,84 +26,45 @@ spec:
       - resources:
           kinds:
           - Pod
-    preconditions:
-      all:
-      - key: "{{request.operation || 'BACKGROUND'}}"
-        operator: AnyIn
-        value:
-        - CREATE
-        - UPDATE
     validate:
-      message: "Only Secrets beginning with `safe-` may be consumed in env statements."
-      pattern:
-        spec:
-          =(ephemeralContainers):
-          - =(name): "*"
-            =(env):
-            - =(valueFrom):
-                =(secretKeyRef):
-                    name: safe-*
-          =(initContainers):
-          - =(name): "*"
-            =(env):
-            - =(valueFrom):
-                =(secretKeyRef):
-                    name: safe-*
-          containers:
-          - name: "*"
-            =(env):
-            - =(valueFrom):
-                =(secretKeyRef):
-                    name: safe-*
+      cel:
+        variables:
+          - name: allContainers
+            expression: "(object.spec.containers + (has(object.spec.initContainers) ? object.spec.initContainers : []) + (has(object.spec.ephemeralContainers) ? object.spec.ephemeralContainers : []))"
+        expressions: 
+          - expression: >-
+              variables.allContainers.all(container, 
+              !has(container.env) || container.env.all(env,
+              !has(env.valueFrom) || !has(env.valueFrom.secretKeyRef) || env.valueFrom.secretKeyRef.name.startsWith("safe-")))
+            message: "Only Secrets beginning with `safe-` may be consumed in env statements."
   - name: safe-secrets-from-envfrom
     match:
       any:
       - resources:
           kinds:
           - Pod
-    preconditions:
-      all:
-      - key: "{{request.operation || 'BACKGROUND'}}"
-        operator: AnyIn
-        value:
-        - CREATE
-        - UPDATE
     validate:
-      message: "Only Secrets beginning with `safe-` may be consumed in envFrom statements."
-      pattern:
-        spec:
-          =(ephemeralContainers):
-          - =(name): "*"
-            =(envFrom):
-            - =(secretRef):
-                name: safe-*
-          =(initContainers):
-          - =(name): "*"
-            =(envFrom):
-            - =(secretRef):
-                name: safe-*
-          containers:
-          - name: "*"
-            =(envFrom):
-            - =(secretRef):
-                name: safe-*
+      cel:
+        variables:
+          - name: allContainers
+            expression: "(object.spec.containers + (has(object.spec.initContainers) ? object.spec.initContainers : []) + (has(object.spec.ephemeralContainers) ? object.spec.ephemeralContainers : []))"
+        expressions: 
+          - expression: >-
+              variables.allContainers.all(container, 
+              !has(container.envFrom) || container.envFrom.all(env,
+              !has(env.secretRef) || env.secretRef.name.startsWith("safe-")))
+            message: "Only Secrets beginning with `safe-` may be consumed in envFrom statements."
   - name: safe-secrets-from-volumes
     match:
       any:
       - resources:
           kinds:
           - Pod
-    preconditions:
-      all:
-      - key: "{{request.operation || 'BACKGROUND'}}"
-        operator: AnyIn
-        value:
-        - CREATE
-        - UPDATE
     validate:
-      message: "Only Secrets beginning with `safe-` may be consumed in volumes."
-      pattern:
-        spec:
-          =(volumes):
-          - =(secret):
-              secretName: safe-*
+      cel:
+        expressions:
+          - expression: >-
+              !has(object.spec.volumes) || object.spec.volumes.all(volume,
+              !has(volume.secret) || volume.secret.secretName.startsWith("safe-"))
+            message: "Only Secrets beginning with `safe-` may be consumed in volumes."
+
