--- a/other-cel/restrict-storageclass/restrict-storageclass.yaml
+++ b/other-cel/restrict-storageclass/restrict-storageclass.yaml
@@ -3,10 +3,12 @@ kind: ClusterPolicy
 metadata:
   name: restrict-storageclass
   annotations:
-    policies.kyverno.io/title: Restrict StorageClass
-    policies.kyverno.io/category: Other, Multi-Tenancy
+    policies.kyverno.io/title: Restrict StorageClass in CEL expressions
+    policies.kyverno.io/category: Other, Multi-Tenancy in CEL 
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: StorageClass
+    kyverno.io/kyverno-version: 1.11.0
+    kyverno.io/kubernetes-version: "1.26-1.27"
     policies.kyverno.io/description: >-
       StorageClasses allow description of custom "classes" of storage offered
       by the cluster, based on quality-of-service levels, backup policies, or
@@ -15,7 +17,7 @@ metadata:
       a PersistentVolume cannot be reused across Namespaces. This policy requires
       StorageClasses set a reclaimPolicy of `Delete`.
 spec:
-  validationFailureAction: audit
+  validationFailureAction: Audit
   background: true
   rules:
   - name: storageclass-delete
@@ -25,6 +27,8 @@ spec:
           kinds:
           - StorageClass
     validate:
-      message: "StorageClass must define a reclaimPolicy of Delete."
-      pattern:
-        reclaimPolicy: Delete
+      cel:
+        expressions:
+          - expression: "object.reclaimPolicy == 'Delete'"
+            message: "StorageClass must define a reclaimPolicy of Delete."
+
