--- a/other/restrict-usergroup-fsgroup-id/.kyverno-test/kyverno-test.yaml
+++ b/other/restrict-usergroup-fsgroup-id/.kyverno-test/kyverno-test.yaml
@@ -10,18 +10,37 @@ results:
 - kind: Pod
   policy: validate-userid-groupid-fsgroup
   resources:
-  - default/myapp-pod
+  - goodpod
   result: pass
-  rule: validate-fsgroup
+  rule: validate-userid
 - kind: Pod
   policy: validate-userid-groupid-fsgroup
   resources:
-  - default/myapp-pod
+  - goodpod
   result: pass
   rule: validate-groupid
 - kind: Pod
   policy: validate-userid-groupid-fsgroup
   resources:
-  - default/myapp-pod
+  - goodpod
   result: pass
+  rule: validate-fsgroup
+- kind: Pod
+  policy: validate-userid-groupid-fsgroup
+  resources:
+  - badpod
+  result: fail
   rule: validate-userid
+- kind: Pod
+  policy: validate-userid-groupid-fsgroup
+  resources:
+  - badpod
+  result: fail
+  rule: validate-groupid
+- kind: Pod
+  policy: validate-userid-groupid-fsgroup
+  resources:
+  - badpod
+  result: fail
+  rule: validate-fsgroup
+
