--- a/other/restrict-usergroup-fsgroup-id/.kyverno-test/resource.yaml
+++ b/other/restrict-usergroup-fsgroup-id/.kyverno-test/resource.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: myapp-pod
+  name: goodpod
   labels:
     app: myapp
 spec:
@@ -12,3 +12,19 @@ spec:
   containers:
   - name: busy
     image: busybox
+---
+apiVersion: v1
+kind: Pod
+metadata:
+  name: badpod
+  labels:
+    app: myapp
+spec:
+  securityContext:
+    runAsUser: 3000
+    runAsGroup: 1000
+    fsGroup: 3000
+  containers:
+  - name: busy
+    image: busybox
+
