--- a/cert-manager/restrict-issuer/.chainsaw-test/chainsaw-test.yaml
+++ b/cert-manager/restrict-issuer/.chainsaw-test/chainsaw-test.yaml
@@ -9,7 +9,7 @@ spec:
   - name: step-01
     try:
     - apply:
-        file: restrict-issuer.yaml
+        file: ../restrict-issuer.yaml
     - patch:
         resource:
           apiVersion: kyverno.io/v1
