--- a/other-cel/advanced-restrict-image-registries/.chainsaw-test/chainsaw-step-02-apply-1.yaml
+++ b/other-cel/advanced-restrict-image-registries/.chainsaw-test/chainsaw-step-02-apply-1.yaml
@@ -2,5 +2,5 @@ apiVersion: v1
 kind: Namespace
 metadata:
   annotations:
-    corp.com/allowed-registries: img.corp.com/*
+    corp.com/allowed-registries: img.corp.com/
   name: imageregistries-ns01
