--- a/other-cel/advanced-restrict-image-registries/.chainsaw-test/chainsaw-step-02-apply-2.yaml
+++ b/other-cel/advanced-restrict-image-registries/.chainsaw-test/chainsaw-step-02-apply-2.yaml
@@ -2,5 +2,5 @@ apiVersion: v1
 kind: Namespace
 metadata:
   annotations:
-    corp.com/allowed-registries: docker.io/*
+    corp.com/allowed-registries: docker.io/
   name: imageregistries-ns02
