--- a/other-cel/advanced-restrict-image-registries/.chainsaw-test/chainsaw-step-02-apply-3.yaml
+++ b/other-cel/advanced-restrict-image-registries/.chainsaw-test/chainsaw-step-02-apply-3.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 data:
-  registries: corp.img.io/*
+  registries: ghcr.io/
 kind: ConfigMap
 metadata:
   name: clusterregistries
-  namespace: imageregistries-ns01
+  namespace: default
