--- a/other-cel/advanced-restrict-image-registries/advanced-restrict-image-registries.yaml
+++ b/other-cel/advanced-restrict-image-registries/advanced-restrict-image-registries.yaml
@@ -3,12 +3,12 @@ kind: ClusterPolicy
 metadata:
   name: advanced-restrict-image-registries
   annotations:
-    policies.kyverno.io/title: Advanced Restrict Image Registries
-    policies.kyverno.io/category: Other
+    policies.kyverno.io/title: Advanced Restrict Image Registries in CEL expressions
+    policies.kyverno.io/category: Other in CEL 
     policies.kyverno.io/severity: medium
-    kyverno.io/kyverno-version: 1.6.0
-    policies.kyverno.io/minversion: 1.6.0
-    kyverno.io/kubernetes-version: "1.23"
+    kyverno.io/kyverno-version: 1.11.0
+    policies.kyverno.io/minversion: 1.11.0
+    kyverno.io/kubernetes-version: "1.26-1.27"
     policies.kyverno.io/subject: Pod
     policies.kyverno.io/description: >-
       In instances where a ClusterPolicy defines all the approved image registries
@@ -18,7 +18,7 @@ metadata:
       policy which gets a global approved registry from a ConfigMap and, based upon an
       annotation at the Namespace level, gets the registry approved for that Namespace.
 spec:
-  validationFailureAction: audit
+  validationFailureAction: Audit
   background: false
   rules:
     - name: validate-corp-registries
@@ -27,39 +27,25 @@ spec:
         - resources:
             kinds:
             - Pod
-      context:
-        # Get the value of the Namespace annotation called `corp.com/allowed-registries` and store. The value
-        # must end with a wildcard. Currently assumes there is only a single registry name in the value.
-        - name: nsregistries
-          apiCall:
-            urlPath: "/api/v1/namespaces/{{request.namespace}}"
-            jmesPath: "metadata.annotations.\"corp.com/allowed-registries\" || ''"
-        # Get the ConfigMap in the `default` Namespace called `clusterregistries` and store. The value of the key
-        # must end with a wildcard. Currently assumes there is only a single registry name in the value.
-        - name: clusterregistries
-          configMap:
+      validate:
+        cel:
+          paramKind: 
+            apiVersion: v1
+            kind: ConfigMap
+          paramRef: 
             name: clusterregistries
             namespace: default
-      preconditions:
-        any:
-        - key: "{{request.operation || 'BACKGROUND'}}"
-          operator: AnyIn
-          value:
-          - CREATE
-          - UPDATE
-      validate:
-        message: This Pod names an image that is not from an approved registry.
-        foreach:
-        # Create a flattened array of all containers in the Pod.
-        - list: "request.object.spec.[initContainers, ephemeralContainers, containers][]"
-          deny:
-            conditions:
-              all:
-                # Loop over every image and deny the Pod if any image doesn't match either the allowed registry in the
-                # cluster ConfigMap or the annotation on the Namespace where the Pod is created.
-                - key: "{{element.image}}"
-                  operator: NotEquals
-                  value: "{{nsregistries}}"
-                - key: "{{element.image}}"
-                  operator: NotEquals
-                  value: "{{clusterregistries.data.registries}}"
+            parameterNotFoundAction: Deny
+          variables:
+            - name: allContainers
+              expression: "(object.spec.containers + (has(object.spec.initContainers) ? object.spec.initContainers : []) + (has(object.spec.ephemeralContainers) ? object.spec.ephemeralContainers : []))"
+            - name: nsregistries
+              expression: >-
+                (has(namespaceObject.metadata.annotations) && 'corp.com/allowed-registries' in namespaceObject.metadata.annotations) ?
+                namespaceObject.metadata.annotations['corp.com/allowed-registries'] : ' '
+            - name: clusterregistries
+              expression: "'registries' in params.data ? params.data['registries'] : ' '"
+          expressions:
+            - expression: "variables.allContainers.all(container, container.image.startsWith(variables.nsregistries) || container.image.startsWith(variables.clusterregistries))"
+              message: This Pod names an image that is not from an approved registry.
+
