--- a/other-cel/restrict-wildcard-resources/restrict-wildcard-resources.yaml
+++ b/other-cel/restrict-wildcard-resources/restrict-wildcard-resources.yaml
@@ -3,13 +3,13 @@ kind: ClusterPolicy
 metadata:
   name: restrict-wildcard-resources
   annotations:
-    policies.kyverno.io/title: Restrict Wildcards in Resources
-    policies.kyverno.io/category: Security, EKS Best Practices
+    policies.kyverno.io/title: Restrict Wildcards in Resources in CEL expressions
+    policies.kyverno.io/category: Security, EKS Best Practices in CEL 
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: ClusterRole, Role, RBAC
-    kyverno.io/kyverno-version: 1.7.0
-    policies.kyverno.io/minversion: 1.6.0
-    kyverno.io/kubernetes-version: "1.23"
+    kyverno.io/kyverno-version: 1.11.0
+    policies.kyverno.io/minversion: 1.11.0
+    kyverno.io/kubernetes-version: "1.26-1.27"
     policies.kyverno.io/description: >-
       Wildcards ('*') in resources grants access to all of the resources referenced by
       the given API group and does not follow the principal of least privilege. As much as possible,
@@ -17,7 +17,7 @@ metadata:
       This policy blocks any Role or ClusterRole that contains a wildcard entry in
       the resources list found in any rule.
 spec:
-  validationFailureAction: audit
+  validationFailureAction: Audit
   background: true
   rules:
     - name: wildcard-resources
@@ -28,10 +28,8 @@ spec:
               - Role
               - ClusterRole
       validate:
-        message: "Use of a wildcard ('*') in any resources is forbidden."
-        deny:
-          conditions:
-            any:
-            - key: "{{ contains(request.object.rules[].resources[], '*') }}"
-              operator: Equals
-              value: true
+        cel:
+          expressions:
+            - expression: "!object.rules.exists(rule, '*' in rule.resources)"
+              message: "Use of a wildcard ('*') in any resources is forbidden."
+
