--- a/other-cel/restrict-wildcard-verbs/restrict-wildcard-verbs.yaml
+++ b/other-cel/restrict-wildcard-verbs/restrict-wildcard-verbs.yaml
@@ -3,13 +3,13 @@ kind: ClusterPolicy
 metadata:
   name: restrict-wildcard-verbs
   annotations:
-    policies.kyverno.io/title: Restrict Wildcard in Verbs
-    policies.kyverno.io/category: Security, EKS Best Practices
+    policies.kyverno.io/title: Restrict Wildcard in Verbs in CEL expressions
+    policies.kyverno.io/category: Security, EKS Best Practices in CEL 
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: Role, ClusterRole, RBAC
-    kyverno.io/kyverno-version: 1.6.2
-    policies.kyverno.io/minversion: 1.6.0
-    kyverno.io/kubernetes-version: "1.23"
+    kyverno.io/kyverno-version: 1.11.0
+    policies.kyverno.io/minversion: 1.11.0
+    kyverno.io/kubernetes-version: "1.26-1.27"
     policies.kyverno.io/description: >-
       Wildcards ('*') in verbs grants all access to the resources referenced by it and
       does not follow the principal of least privilege. As much as possible,
@@ -17,7 +17,7 @@ metadata:
       This policy blocks any Role or ClusterRole that contains a wildcard entry in
       the verbs list found in any rule.
 spec:
-  validationFailureAction: audit
+  validationFailureAction: Audit
   background: true
   rules:
     - name: wildcard-verbs
@@ -28,10 +28,8 @@ spec:
               - Role
               - ClusterRole
       validate:
-        message: "Use of a wildcard ('*') in any verbs is forbidden."
-        deny:
-          conditions:
-            any:
-            - key: "{{ contains(request.object.rules[].verbs[], '*') }}"
-              operator: Equals
-              value: true
+        cel:
+          expressions:
+            - expression: "!object.rules.exists(rule, '*' in rule.verbs)"
+              message: "Use of a wildcard ('*') in any verbs is forbidden."
+
