--- a/other/copy-namespace-labels/.chainsaw-test/ns.yaml
+++ b/other/copy-namespace-labels/.chainsaw-test/ns.yaml
@@ -5,3 +5,10 @@ metadata:
   labels:
     owner: "any-corp"  
     env: dev
+---
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: without-ns
+  labels:
+    owner: "any-corp" 
