--- a/other-cel/block-pod-exec-by-namespace/block-pod-exec-by-namespace.yaml
+++ b/other-cel/block-pod-exec-by-namespace/block-pod-exec-by-namespace.yaml
@@ -3,16 +3,17 @@ kind: ClusterPolicy
 metadata:
   name: deny-exec-by-namespace-name
   annotations:
-    policies.kyverno.io/title: Block Pod Exec by Namespace Name
-    policies.kyverno.io/category: Sample
-    policies.kyverno.io/minversion: 1.6.0
+    policies.kyverno.io/title: Block Pod Exec by Namespace Name in CEL expressions
+    policies.kyverno.io/category: Sample in CEL 
+    policies.kyverno.io/minversion: 1.11.0
+    kyverno.io/kubernetes-version: "1.26-1.27"
     policies.kyverno.io/subject: Pod
     policies.kyverno.io/description: >-
       The `exec` command may be used to gain shell access, or run other commands, in a Pod's container. While this can
       be useful for troubleshooting purposes, it could represent an attack vector and is discouraged.
       This policy blocks Pod exec commands to Pods in a Namespace called `pci`.
 spec:
-  validationFailureAction: enforce
+  validationFailureAction: Enforce
   background: false
   rules:
   - name: deny-exec-ns-pci
@@ -21,16 +22,11 @@ spec:
       - resources:
           kinds:
           - Pod/exec
-    preconditions:
-      all:
-      - key: "{{ request.operation || 'BACKGROUND' }}"
-        operator: Equals
-        value: CONNECT
+          operations:
+          - CONNECT
     validate:
-      message: Pods in this namespace may not be exec'd into.
-      deny:
-        conditions:
-          any:
-          - key: "{{ request.namespace }}"
-            operator: Equals
-            value: pci
+      cel:
+        expressions:
+          - expression: "request.namespace != 'pci'"
+            message: Pods in this namespace may not be exec'd into.
+
