use has() in cel expression for readability
Signed-off-by: Chandan-DK <chandandk468@gmail.com>

--- a/other-cel/require-ingress-https/require-ingress-https.yaml
+++ b/other-cel/require-ingress-https/require-ingress-https.yaml
@@ -41,6 +41,6 @@ spec:
     validate:
       cel:
         expressions:
-          - expression: "'tls' in object.spec"
+          - expression: "has(object.spec.tls)"
             message: "TLS must be defined."
 
