add CI test for directories e to l
Signed-off-by: Chandan-DK <chandandk468@gmail.com>

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -55,6 +55,7 @@ jobs:
           - ^other$/^[s-z]
           - ^other-cel$/^a
           - ^other-cel$/^[b-d]
+          - ^other-cel$/^[e-l]
           - ^pod-security$
           - ^pod-security-cel$
           - ^psa$
