--- a/other-cel/exclude-namespaces-dynamically/.chainsaw-test/cm.yaml
+++ b/other-cel/exclude-namespaces-dynamically/.chainsaw-test/cm.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 data:
-  exclude: "[\"exclude-ns\", \"not-exclude-ns\"]"
+  exclude: "exclude-ns, exclude-ns-2"
 kind: ConfigMap
 metadata:
   name: namespace-filters
