--- a/other-cel/deny-commands-in-exec-probe/deny-commands-in-exec-probe.yaml
+++ b/other-cel/deny-commands-in-exec-probe/deny-commands-in-exec-probe.yaml
@@ -3,12 +3,12 @@ kind: ClusterPolicy
 metadata:
   name: deny-commands-in-exec-probe
   annotations:
-    policies.kyverno.io/title: Deny Commands in Exec Probe
-    policies.kyverno.io/category: Other
+    policies.kyverno.io/title: Deny Commands in Exec Probe in CEL expressions
+    policies.kyverno.io/category: Other in CEL
     policies.kyverno.io/subject: Pod
-    kyverno.io/kyverno-version: 1.1.0
-    policies.kyverno.io/minversion: 1.9.0
-    kyverno.io/kubernetes-version: "1.26"
+    kyverno.io/kyverno-version: 1.11.0
+    policies.kyverno.io/minversion: 1.11.0
+    kyverno.io/kubernetes-version: "1.26-1.27"
     policies.kyverno.io/description: >-
       Developers may feel compelled to use simple shell commands as a workaround to
       creating "proper" liveness or readiness probes for a Pod. Such a practice can be discouraged
@@ -24,28 +24,19 @@ spec:
         - resources:
             kinds:
               - Pod
-      preconditions:
-        all:
-        - key: "{{ length(request.object.spec.containers[].livenessProbe.exec.command[] || `[]`) }}"
-          operator: GreaterThan
-          value: 0
-        - key: "{{ request.operation }}"
-          operator: NotEquals
-          value: DELETE
+      celPreconditions:
+        - name: "check-liveness-probes-commands-exist"
+          expression: >-
+            object.spec.containers.exists(container, 
+            has(container.livenessProbe) && has(container.livenessProbe.exec) && 
+            size(container.livenessProbe.exec.command) > 0)
       validate:
-        message: Cannot use commands `jcmd`, `ps`, or `ls` in liveness probes.
-        deny:
-          conditions:
-            any:
-            - key:
-              - true
-              operator: AnyIn
-              value: "{{ request.object.spec.containers[].livenessProbe.exec.command[].regex_match('\\bjcmd\\b',@) }}"
-            - key:
-              - true
-              operator: AnyIn
-              value: "{{ request.object.spec.containers[].livenessProbe.exec.command[].regex_match('\\bps\\b',@) }}"
-            - key:
-              - true
-              operator: AnyIn
-              value: "{{ request.object.spec.containers[].livenessProbe.exec.command[].regex_match('\\bls\\b',@) }}"
+        cel:
+          expressions:
+            - expression: >-
+                object.spec.containers.all(container, 
+                !has(container.livenessProbe) || !has(container.livenessProbe.exec) || 
+                !container.livenessProbe.exec.command.exists(command, 
+                command.matches('\\bjcmd\\b') || command.matches('\\bps\\b') || command.matches('\\bls\\b')))
+              message: Cannot use commands `jcmd`, `ps`, or `ls` in liveness probes.
+
