--- a/other/copy-namespace-labels/.chainsaw-test/chainsaw-test.yaml
+++ b/other/copy-namespace-labels/.chainsaw-test/chainsaw-test.yaml
@@ -15,9 +15,6 @@ spec:
   - name: step-02
     try:
     - apply:
-        file: gooddeployment.yaml
-    - apply:
-        expect:
-        - check:
-            ($error != null): true
-        file: baddeployment.yaml
+        file: resource.yaml
+    - assert:
+        file: patchresource.yaml
