--- a/other-cel/require-container-port-names/require-container-port-names.yaml
+++ b/other-cel/require-container-port-names/require-container-port-names.yaml
@@ -3,11 +3,11 @@ kind: ClusterPolicy
 metadata:
   name: require-container-port-names
   annotations:
-    policies.kyverno.io/title: Require Container Port Names
-    policies.kyverno.io/category: Other
+    policies.kyverno.io/title: Require Container Port Names in CEL expressions
+    policies.kyverno.io/category: Other in CEL 
     policies.kyverno.io/severity: medium
-    kyverno.io/kyverno-version: 1.7.2
-    kyverno.io/kubernetes-version: "1.23"
+    kyverno.io/kyverno-version: 1.11.0
+    kyverno.io/kubernetes-version: "1.26-1.27"
     policies.kyverno.io/subject: Pod
     policies.kyverno.io/description: >-
       Containers may define ports on which they listen. In addition to a port number,
@@ -16,7 +16,7 @@ metadata:
       the port number to change. This policy requires that for every containerPort defined
       there is also a name specified.      
 spec:
-  validationFailureAction: audit
+  validationFailureAction: Audit
   background: true
   rules:
     - name: port-name
@@ -26,10 +26,8 @@ spec:
             kinds:
               - Pod
       validate:
-        message: Name is required for every containerPort.
-        pattern:
-          spec:
-            containers:
-            - name: "*"
-              =(ports):
-              - name: "*"
+        cel:
+          expressions:
+            - expression: "object.spec.containers.all(container, !has(container.ports) || container.ports.all(port, has(port.name)))"
+              message: Name is required for every containerPort.
+
