--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -56,6 +56,7 @@ jobs:
           - ^other-cel$/^a
           - ^other-cel$/^[b-d]
           - ^other-cel$/^[e-l]
+          - ^other-cel$/^re[c-q]
           - ^pod-security$
           - ^pod-security-cel$
           - ^psa$
