add CI tests for directories starting with res
Signed-off-by: Chandan-DK <chandandk468@gmail.com>

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -57,6 +57,7 @@ jobs:
           - ^other-cel$/^[b-d]
           - ^other-cel$/^[e-l]
           - ^other-cel$/^re[c-q]
+          - ^other-cel$/^res
           - ^pod-security$
           - ^pod-security-cel$
           - ^psa$
