--- a/other-cel/topologyspreadconstraints-policy/.kyverno-test/resource-pass.yaml
+++ b/other-cel/topologyspreadconstraints-policy/.kyverno-test/resource-pass.yaml
@@ -2,7 +2,7 @@
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
-  name: pass
+  name: goodss01
   namespace: monitoring
   labels:
     app: thanos-memcached
