--- a/other/topologyspreadconstraints-policy/.kyverno-test/resource-fail2.yaml
+++ b/other/topologyspreadconstraints-policy/.kyverno-test/resource-fail2.yaml
@@ -2,7 +2,7 @@
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
-  name: fail2
+  name: badss02
   namespace: monitoring
   labels:
     app: thanos-memcached
