--- a/other-cel/topologyspreadconstraints-policy/topologyspreadconstraints-policy.yaml
+++ b/other-cel/topologyspreadconstraints-policy/topologyspreadconstraints-policy.yaml
@@ -3,24 +3,23 @@ kind: ClusterPolicy
 metadata:
   name: topologyspreadconstraints-policy
   annotations:
-    policies.kyverno.io/title: Spread Pods Across Nodes & Zones
-    kyverno.io/kubernetes-version: "1.22-1.23"
-    kyverno.io/kyverno-version: 1.8.0
-    policies.kyverno.io/category: Sample
+    policies.kyverno.io/title: Spread Pods Across Nodes & Zones in CEL expressions
+    kyverno.io/kubernetes-version: "1.26-1.27"
+    kyverno.io/kyverno-version: 1.11.0
+    policies.kyverno.io/category: Sample in CEL 
     policies.kyverno.io/description: >-
       Deployments to a Kubernetes cluster with multiple availability zones often need to
       distribute those replicas to align with those zones to ensure site-level failures
       do not impact availability. This policy ensures topologySpreadConstraints are defined, 
-      to spread pods over nodes and zones. Deployments or Statefulsets with leass than 3 
+      to spread pods over nodes and zones. Deployments or Statefulsets with less than 3 
       replicas are skipped.
-    policies.kyverno.io/minversion: 1.8.0
+    policies.kyverno.io/minversion: 1.11.0
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: Deployment, StatefulSet
-    
 spec:
   background: true
   failurePolicy: Ignore
-  validationFailureAction: audit
+  validationFailureAction: Audit
   rules:
     - name: spread-pods
       match:
@@ -29,16 +28,14 @@ spec:
               kinds:
                 - Deployment
                 - StatefulSet
-      preconditions:
-        all:
-          - key: "{{ request.object.spec.replicas }}"
-            operator: GreaterThanOrEquals
-            value: 3
+      celPreconditions:
+        - name: "replicas-must-be-3-or-more"
+          expression: "object.spec.replicas >= 3"
       validate:
-        message: "topologySpreadConstraint for kubernetes.io/hostname & topology.kubernetes.io/zone are required"
-        deny:
-          conditions:
-            any:
-              - key: "{{request.object.spec.template.spec.topologySpreadConstraints[?topologyKey=='kubernetes.io/hostname' || topologyKey=='topology.kubernetes.io/zone'] || `[]` | length(@) }}"
-                operator: NotEquals
-                value: 2
+        cel:
+          expressions:
+            - expression: >-
+                has(object.spec.template.spec.topologySpreadConstraints) && 
+                size(object.spec.template.spec.topologySpreadConstraints.filter(t, t.topologyKey == 'kubernetes.io/hostname' || t.topologyKey == 'topology.kubernetes.io/zone')) == 2
+              message: "topologySpreadConstraint for kubernetes.io/hostname & topology.kubernetes.io/zone are required"
+
