--- a/cert-manager/limit-dnsnames/.chainsaw-test/chainsaw-test.yaml
+++ b/cert-manager/limit-dnsnames/.chainsaw-test/chainsaw-test.yaml
@@ -9,7 +9,7 @@ spec:
   - name: step-01
     try:
     - apply:
-        file: limit-dnsnames.yaml
+        file: ../limit-dnsnames.yaml
     - patch:
         resource:
           apiVersion: kyverno.io/v1
