Move chainsaw tests present in cert-manager/limit-duration to dedicated folder (#972)
* refacoring tests

Signed-off-by: mohamedasifs123 <asifabu272@gmail.com>

* refacoring tests

Signed-off-by: mohamedasifs123 <asifabu272@gmail.com>

* refacoring tests

Signed-off-by: mohamedasifs123 <asifabu272@gmail.com>

* refacoring tests

Signed-off-by: mohamedasifs123 <asifabu272@gmail.com>

---------

Signed-off-by: mohamedasifs123 <asifabu272@gmail.com>
Co-authored-by: Chip Zoller <chipzoller@gmail.com>

--- a/cert-manager/limit-duration/.chainsaw-test/chainsaw-test.yaml
+++ b/cert-manager/limit-duration/.chainsaw-test/chainsaw-test.yaml
@@ -9,7 +9,7 @@ spec:
   - name: step-01
     try:
     - apply:
-        file: limit-duration.yaml
+        file: ../limit-duration.yaml
     - patch:
         resource:
           apiVersion: kyverno.io/v1
