--- a/argo-cel/application-field-validation/application-field-validation.yaml
+++ b/argo-cel/application-field-validation/application-field-validation.yaml
@@ -3,19 +3,19 @@ kind: ClusterPolicy
 metadata:
   name: application-field-validation
   annotations:
-    policies.kyverno.io/title: Application Field Validation
-    policies.kyverno.io/category: Argo
+    policies.kyverno.io/title: Application Field Validation in CEL expressions
+    policies.kyverno.io/category: Argo in CEL 
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: Application
-    kyverno.io/kyverno-version: 1.6.0
-    policies.kyverno.io/minversion: 1.6.0
-    kyverno.io/kubernetes-version: "1.23"
+    kyverno.io/kyverno-version: 1.11.0
+    policies.kyverno.io/minversion: 1.11.0
+    kyverno.io/kubernetes-version: "1.26-1.27"
     policies.kyverno.io/description: >-
       This policy performs some best practices validation on Application fields.
       Path or chart must be specified but never both. And destination.name or
       destination.server must be specified but never both.
 spec:
-  validationFailureAction: audit
+  validationFailureAction: Audit
   background: true
   rules:
     - name: source-path-chart
@@ -25,17 +25,16 @@ spec:
             kinds:
             - Application
       validate:
-        message: >-
-          `spec.source.path` OR `spec.source.chart` should be specified but never both.
-        anyPattern:
-        - spec:
-            source:
-              path: '?*'
-              X(chart):
-        - spec:
-            source:
-              X(path):
-              chart: '?*'
+        cel:
+          expressions:
+            - expression: >-
+                has(object.spec.source) &&
+                (
+                  (has(object.spec.source.path) && !has(object.spec.source.chart)) ||
+                  (!has(object.spec.source.path) && has(object.spec.source.chart))
+                )
+              message: >-
+                `spec.source.path` OR `spec.source.chart` should be specified but never both.
     - name: destination-server-name
       match:
         any:
@@ -43,14 +42,14 @@ spec:
             kinds:
             - Application
       validate:
-        message: >-
-          `spec.destination.server` OR `spec.destination.name` should be specified but never both.
-        anyPattern:
-        - spec:
-            destination:
-              server: '?*'
-              X(name):
-        - spec:
-            destination:
-              X(server):
-              name: '?*'
+        cel:
+          expressions:
+            - expression: >-
+                has(object.spec.destination) &&
+                (
+                  (has(object.spec.destination.server) && !has(object.spec.destination.name)) ||
+                  (!has(object.spec.destination.server) && has(object.spec.destination.name))
+                )
+              message: >-
+                `spec.destination.server` OR `spec.destination.name` should be specified but never both.
+
