convert application-prevent-default-project
Signed-off-by: Chandan-DK <chandandk468@gmail.com>

--- a/argo-cel/application-prevent-default-project/application-prevent-default-project.yaml
+++ b/argo-cel/application-prevent-default-project/application-prevent-default-project.yaml
@@ -3,17 +3,17 @@ kind: ClusterPolicy
 metadata:
   name: application-prevent-default-project
   annotations:
-    policies.kyverno.io/title: Prevent Use of Default Project
-    policies.kyverno.io/category: Argo
+    policies.kyverno.io/title: Prevent Use of Default Project in CEL expressions
+    policies.kyverno.io/category: Argo in CEL 
     policies.kyverno.io/severity: medium
-    kyverno.io/kyverno-version: 1.6.2
-    policies.kyverno.io/minversion: 1.6.0
-    kyverno.io/kubernetes-version: "1.23"
+    kyverno.io/kyverno-version: 1.11.0
+    policies.kyverno.io/minversion: 1.11.0
+    kyverno.io/kubernetes-version: "1.26-1.27"
     policies.kyverno.io/subject: Application
     policies.kyverno.io/description: >-
       This policy prevents the use of the default project in an Application.
 spec:
-  validationFailureAction: audit
+  validationFailureAction: Audit
   background: true
   rules:
     - name: default-project
@@ -22,13 +22,9 @@ spec:
         - resources:
             kinds:
               - Application
-      preconditions:
-        all:
-        - key: "{{ request.operation || 'BACKGROUND' }}"
-          operator: NotEquals
-          value: DELETE
       validate:
-        message: "The default project may not be used in an Application."
-        pattern:
-          spec:
-            project: "!default"
+        cel:
+          expressions:
+            - expression: "has(object.spec.project) && object.spec.project != 'default'"
+              message: "The default project may not be used in an Application."
+
