add CI test for consul directory
Signed-off-by: Chandan-DK <chandandk468@gmail.com>

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -36,6 +36,7 @@ jobs:
           - ^castai$
           - ^cert-manager$
           - ^consul$
+          - ^consul-cel$
           - ^external-secret-operator$
           - ^flux$
           - ^istio$
