Updating kasten-minimum-retention clusterpolicy, adding precondition
Signed-off-by: Matt Bator <matt.bator@kasten.io>

--- a/kasten/kasten-minimum-retention/.kyverno-test/kasten-hourly-policy.yaml
+++ b/kasten/kasten-minimum-retention/.kyverno-test/kasten-hourly-policy.yaml
@@ -1,4 +1,3 @@
-# An example compliant K10 Policy
 apiVersion: config.kio.kasten.io/v1alpha1
 kind: Policy
 metadata:
@@ -8,7 +7,7 @@ metadata:
     appPriority: Mission-Critical
 spec:
   comment: My sample custom backup policy
-  frequency: '@hourly' # change this to @daily to test the 'audit_mission_critical_RPO' policy
+  frequency: '@hourly'
   subFrequency:
     minutes: [30]
     hours: [22,7]
@@ -20,7 +19,7 @@ spec:
     monthly: 6
   actions:
   - action: backup
-  - action: export  # comment this line out to test 'enforce_3-2-1' policy
+  - action: export
     exportParameters:
       frequency: '@monthly'
       profile:
