--- a/kasten/kasten-hourly-rpo/.kyverno-test/kyverno-test.yaml
+++ b/kasten/kasten-hourly-rpo/.kyverno-test/kyverno-test.yaml
@@ -3,19 +3,20 @@ kind: Test
 metadata:
   name: kyverno_data_protection_tests
 policies:
-- ../k10-hourly-rpo.yaml
+- ../kasten-hourly-rpo.yaml
 resources:
-- backup-export-policy.yaml
+- test-policies.yaml
 results:
 - kind: Policy
-  policy: k10-policy-hourly-rpo
+  policy: kasten-hourly-rpo
   resources:
   - daily-policy
   result: fail
-  rule: k10-policy-hourly-rpo
+  rule: kasten-hourly-rpo
 - kind: Policy
-  policy: k10-policy-hourly-rpo
+  policy: kasten-hourly-rpo
   resources:
   - hourly-policy
   result: pass
-  rule: k10-policy-hourly-rpo
+  rule: kasten-hourly-rpo
+variables: test-values.yaml
