--- a/kasten/kasten-hourly-rpo/.chainsaw-test/chainsaw-test.yaml
+++ b/kasten/kasten-hourly-rpo/.chainsaw-test/chainsaw-test.yaml
@@ -9,13 +9,13 @@ spec:
   - name: step-01
     try:
     - apply:
-        file: ../k10-hourly-rpo.yaml
+        file: ../kasten-hourly-rpo.yaml
     - patch:
         resource:
           apiVersion: kyverno.io/v1
           kind: ClusterPolicy
           metadata:
-            name: k10-policy-hourly-rpo
+            name: kasten-hourly-rpo
           spec:
             validationFailureAction: Enforce
     - assert:
@@ -24,6 +24,8 @@ spec:
         file: chainsaw-step-01-assert-2.yaml
   - name: step-02
     try:
+    - apply:
+        file: ns.yaml
     - apply:
         file: k10-good-policy.yaml
     - apply:
