Naming updates to chainsaw test
Signed-off-by: Matt Bator <matt.bator@kasten.io>

--- a/kasten/kasten-data-protection-by-label/.chainsaw-test/ss-good.yaml
+++ b/kasten/kasten-data-protection-by-label/.chainsaw-test/ss-good.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: k10-dplabel-ns
   labels:
     purpose: production
-    dataprotection: k10-silverpolicy
+    dataprotection: kasten-example
 spec:
   selector:
     matchLabels:
