--- a/kasten/kasten-data-protection-by-label/.chainsaw-test/deployment-good.yaml
+++ b/kasten/kasten-data-protection-by-label/.chainsaw-test/deployment-good.yaml
@@ -6,7 +6,7 @@ metadata:
   labels:
     app: busybox
     purpose: production
-    dataprotection: k10-goldpolicy
+    dataprotection: kasten-example
 spec:
   replicas: 1
   selector:
