Replace audit with Audit, update digest
Signed-off-by: Matt Bator <matt.bator@kasten.io>

--- a/kasten/kasten-data-protection-by-label/kasten-data-protection-by-label.yaml
+++ b/kasten/kasten-data-protection-by-label/kasten-data-protection-by-label.yaml
@@ -14,7 +14,7 @@ metadata:
 
       Use in combination with 'kasten-generate-example-backup-policy' policy to generate a Kasten policy for the workload namespace, if it doesn't already exist.
 spec:
-  validationFailureAction: audit
+  validationFailureAction: Audit
   rules:
   - name: kasten-data-protection-by-label
     match:
