Add kasten-io namespace to chainsaw test
Signed-off-by: Matt Bator <matt.bator@kasten.io>

--- a/kasten/kasten-hourly-rpo/.chainsaw-test/ns.yaml
+++ b/kasten/kasten-hourly-rpo/.chainsaw-test/ns.yaml
@@ -4,3 +4,8 @@ metadata:
   name: test-namespace
   labels:
     appPriority: critical
+---
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: kasten-io
