--- a/flux-cel/verify-flux-sources/.chainsaw-test/repo-good-git.yaml
+++ b/flux-cel/verify-flux-sources/.chainsaw-test/repo-good-git.yaml
@@ -1,7 +1,7 @@
 apiVersion: source.toolkit.fluxcd.io/v1
 kind: GitRepository
 metadata:
-  name: gitrepo-01
+  name: good-gitrepo-01
 spec:
   interval: 5m0s
   url: https://github.com/myorg/podinfo
@@ -9,7 +9,7 @@ spec:
 apiVersion: source.toolkit.fluxcd.io/v1
 kind: GitRepository
 metadata:
-  name: gitrepo-02
+  name: good-gitrepo-02
 spec:
   interval: 5m0s
   url: ssh://git@github.com:myorg/podinfo
@@ -17,7 +17,7 @@ spec:
 apiVersion: source.toolkit.fluxcd.io/v1
 kind: GitRepository
 metadata:
-  name: gitrepo-03
+  name: good-gitrepo-03
   namespace: flux-system
 spec:
   interval: 5m0s
