add CI tests for aws-cel
Signed-off-by: Chandan-DK <chandandk468@gmail.com>

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,6 +32,7 @@ jobs:
           - ^argo$
           - ^argo-cel$
           - ^aws$
+          - ^aws-cel$
           - ^best-practices$
           - ^castai$
           - ^cert-manager$
