convert enforce-sidecar-injection-namespace
Signed-off-by: Chandan-DK <chandandk468@gmail.com>

--- a/istio-cel/enforce-sidecar-injection-namespace/enforce-sidecar-injection-namespace.yaml
+++ b/istio-cel/enforce-sidecar-injection-namespace/enforce-sidecar-injection-namespace.yaml
@@ -3,19 +3,19 @@ kind: ClusterPolicy
 metadata:
   name: enforce-sidecar-injection-namespace
   annotations:
-    policies.kyverno.io/title: Enforce Istio Sidecar Injection
-    policies.kyverno.io/category: Istio
+    policies.kyverno.io/title: Enforce Istio Sidecar Injection in CEL expressions
+    policies.kyverno.io/category: Istio in CEL 
     policies.kyverno.io/severity: medium
-    kyverno.io/kyverno-version: 1.8.0
-    policies.kyverno.io/minversion: 1.6.0
-    kyverno.io/kubernetes-version: "1.24"
+    kyverno.io/kyverno-version: 1.11.0
+    policies.kyverno.io/minversion: 1.11.0
+    kyverno.io/kubernetes-version: "1.26-1.27"
     policies.kyverno.io/subject: Namespace
     policies.kyverno.io/description: >-
       In order for Istio to inject sidecars to workloads deployed into Namespaces, the label
       `istio-injection` must be set to `enabled`. This policy ensures that all new Namespaces
       set `istio-inject` to `enabled`.
 spec:
-  validationFailureAction: audit
+  validationFailureAction: Audit
   background: true
   rules:
   - name: check-istio-injection-enabled
@@ -25,8 +25,8 @@ spec:
           kinds:
           - Namespace
     validate:
-      message: "All new Namespaces must have Istio sidecar injection enabled."
-      pattern:
-        metadata:
-          labels:
-            istio-injection: enabled
+      cel:
+        expressions:
+          - expression: "has(object.metadata.labels) && 'istio-injection' in object.metadata.labels && object.metadata.labels['istio-injection'] == 'enabled'"
+            message: "All new Namespaces must have Istio sidecar injection enabled."
+
