make corrections in chainsaw resources
Signed-off-by: Chandan-DK <chandandk468@gmail.com>

--- a/istio-cel/prevent-disabling-injection-pods/.chainsaw-test/podcontroller-good.yaml
+++ b/istio-cel/prevent-disabling-injection-pods/.chainsaw-test/podcontroller-good.yaml
@@ -52,9 +52,10 @@ spec:
   jobTemplate:
     spec:
       template:
-        spec:
+        metadata:
           annotations:
             app.k8s.io/name: busybox
+        spec:
           containers:
           - name: hello
             image: busybox:1.35
@@ -72,10 +73,11 @@ spec:
   jobTemplate:
     spec:
       template:
-        spec:
+        metadata:
           annotations:
             app.k8s.io/name: busybox
             sidecar.istio.io/inject: "true"
+        spec:
           containers:
           - name: hello
             image: busybox:1.35
