--- a/istio/prevent-disabling-injection-pods/.chainsaw-test/podcontroller-bad.yaml
+++ b/istio/prevent-disabling-injection-pods/.chainsaw-test/podcontroller-bad.yaml
@@ -53,16 +53,17 @@ spec:
   jobTemplate:
     spec:
       template:
-        spec:
+        metadata:
           annotations:
             app.k8s.io/name: busybox
             sidecar.istio.io/inject: "false"
+        spec:
           containers:
           - name: hello
             image: busybox:1.35
             command:
             - sleep
-            - 3600
+            - "3600"
           restartPolicy: OnFailure
 ---
 apiVersion: batch/v1
@@ -74,14 +75,15 @@ spec:
   jobTemplate:
     spec:
       template:
-        spec:
+        metadata:
           annotations:
             sidecar.istio.io/inject: "false"
             app.k8s.io/name: busybox
+        spec:
           containers:
           - name: hello
             image: busybox:1.35
-            command:
+            command: 
             - sleep
-            - 3600
+            - "3600"
           restartPolicy: OnFailure
