add CI tests for istio-cel
Signed-off-by: Chandan-DK <chandandk468@gmail.com>

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -38,6 +38,7 @@ jobs:
           - ^external-secret-operator$
           - ^flux$
           - ^istio$
+          - ^istio-cel$
           - ^karpenter$
           - ^kasten$
           - ^kubecost$
